# poi

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CLAUDE.md  Makefile  README.md  data.xlsx  index.html  main.py  mkdocs.yml  mypy.ini  pyproject.toml  table.xlsx  tox.ini
.github/workflows/: docs.yml  release.yml  tests.yaml
advanced/: index.html
basic-usage/: index.html
components/: index.html
docs/: advanced.md  basic-usage.md  components.md  index.md  multi-sheet.md  styling.md
multi-sheet/: index.html
poi/: __init__.py  __init__.pyE  book.py  helpers.py  nodes.py  sheet.py  utils.py  writer.py
poi/visitors/: printer.py  writer.py
search/: search_index.json
styling/: index.html
tests/: conftest.py  test_autofit.py  test_get_obj_attr.py  test_poi.py  test_poi.pyE
tests/__snapshots__/: autofit_empty_and_nulls.xlsx  autofit_empty_data.xlsx  autofit_header_comments.xlsx  autofit_mixed_widths.xlsx  autofit_table.xlsx  autofit_various_types.xlsx  basic.xlsx  comment.xlsx  complex.xlsx  complex_col.xlsx  complex_row.xlsx  image.xlsx  table.xlsx  table_header_comments.xlsx
