[project]
name = "poi"
version = "1.2.6"
description = "Write Excel XLSX declaratively."
authors = [
{ name = "Ryan Wang", email = " hwwangwang@gmail.com" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/baoshishu/poi"
repository = "https://github.com/baoshishu/poi"
documentation = "https://baoshishu.github.io/poi/"
requires-python = ">=3.9"



keywords = ["xlsx", "xlswriter", "excel", "declarative"]

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "xlsxwriter>=3.2.5",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "typing-extensions>=4.14.1",
]


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "I", # isort
]

[tool.mypy]
python_version = "3.9"
strict = true
exclude = "tests"

[[tool.mypy.overrides]]
module = "xlsxwriter.*"
ignore_missing_imports = true

[tool.uv.build-backend]
module-root = ""
