[project]
name = "poi"
version = "1.2.8"
description = "Write Excel XLSX declaratively."
authors = [
{ name = "Ryan Wang", email = " hwwangwang@gmail.com" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/baoshishu/poi"
repository = "https://github.com/baoshishu/poi"
documentation = "https://baoshishu.github.io/poi/"
requires-python = ">=3.11"



keywords = ["xlsx", "xlswriter", "excel", "declarative"]

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "xlsxwriter>=3.2.5",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.18",
]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "I", # isort
      "UP", # pyupgrade

]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "tests"

[[tool.mypy.overrides]]
module = "xlsxwriter.*"
ignore_missing_imports = true

[tool.uv.build-backend]
module-root = ""
